dataset cleanup done

--- a/notebooks/covid-19_analysis.ipynb
+++ b/notebooks/covid-19_analysis.ipynb
@@ -9,22 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import pandas as pd\n",
-    "import pendulum as pen\n",
     "import seaborn as sns\n",
     "from pathlib import Path\n",
-    "from datetime import datetime as dt"
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,21 +43,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## COVID-19 NYT Dataset"
+    "## COVID-19 Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset Cleanup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
-    "covid_df = pd.read_csv(f\"{datasets_dir}/covid-19_us_states.csv\", parse_dates=True)"
+    "raw_covid_df = pd.read_csv(f\"{datasets_dir}/owid-covid-data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -82,133 +88,182 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>location</th>\n",
        "      <th>date</th>\n",
-       "      <th>state</th>\n",
-       "      <th>fips</th>\n",
-       "      <th>cases</th>\n",
-       "      <th>deaths</th>\n",
+       "      <th>total_cases</th>\n",
+       "      <th>new_cases</th>\n",
+       "      <th>new_cases_smoothed</th>\n",
+       "      <th>total_deaths</th>\n",
+       "      <th>new_deaths</th>\n",
+       "      <th>new_deaths_smoothed</th>\n",
+       "      <th>...</th>\n",
+       "      <th>gdp_per_capita</th>\n",
+       "      <th>extreme_poverty</th>\n",
+       "      <th>cardiovasc_death_rate</th>\n",
+       "      <th>diabetes_prevalence</th>\n",
+       "      <th>female_smokers</th>\n",
+       "      <th>male_smokers</th>\n",
+       "      <th>handwashing_facilities</th>\n",
+       "      <th>hospital_beds_per_thousand</th>\n",
+       "      <th>life_expectancy</th>\n",
+       "      <th>human_development_index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-01-21</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <th>47956</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>International</td>\n",
+       "      <td>2020-10-02</td>\n",
+       "      <td>696.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-22</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <th>47957</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>International</td>\n",
+       "      <td>2020-10-03</td>\n",
+       "      <td>696.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-01-23</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-01-24</td>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-01-24</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2020-01-25</td>\n",
-       "      <td>California</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2020-01-25</td>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2020-01-25</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2020-01-26</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2020-01-26</td>\n",
-       "      <td>California</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <th>47958</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>International</td>\n",
+       "      <td>2020-10-04</td>\n",
+       "      <td>696.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date       state  fips  cases  deaths\n",
-       "0  2020-01-21  Washington    53      1       0\n",
-       "1  2020-01-22  Washington    53      1       0\n",
-       "2  2020-01-23  Washington    53      1       0\n",
-       "3  2020-01-24    Illinois    17      1       0\n",
-       "4  2020-01-24  Washington    53      1       0\n",
-       "5  2020-01-25  California     6      1       0\n",
-       "6  2020-01-25    Illinois    17      1       0\n",
-       "7  2020-01-25  Washington    53      1       0\n",
-       "8  2020-01-26     Arizona     4      1       0\n",
-       "9  2020-01-26  California     6      2       0"
+       "      iso_code continent       location        date  total_cases  new_cases  \\\n",
+       "47956      NaN       NaN  International  2020-10-02        696.0        NaN   \n",
+       "47957      NaN       NaN  International  2020-10-03        696.0        NaN   \n",
+       "47958      NaN       NaN  International  2020-10-04        696.0        NaN   \n",
+       "\n",
+       "       new_cases_smoothed  total_deaths  new_deaths  new_deaths_smoothed  ...  \\\n",
+       "47956                 NaN           7.0         NaN                  NaN  ...   \n",
+       "47957                 NaN           7.0         NaN                  NaN  ...   \n",
+       "47958                 NaN           7.0         NaN                  NaN  ...   \n",
+       "\n",
+       "       gdp_per_capita  extreme_poverty  cardiovasc_death_rate  \\\n",
+       "47956             NaN              NaN                    NaN   \n",
+       "47957             NaN              NaN                    NaN   \n",
+       "47958             NaN              NaN                    NaN   \n",
+       "\n",
+       "       diabetes_prevalence  female_smokers  male_smokers  \\\n",
+       "47956                  NaN             NaN           NaN   \n",
+       "47957                  NaN             NaN           NaN   \n",
+       "47958                  NaN             NaN           NaN   \n",
+       "\n",
+       "       handwashing_facilities  hospital_beds_per_thousand  life_expectancy  \\\n",
+       "47956                     NaN                         NaN              NaN   \n",
+       "47957                     NaN                         NaN              NaN   \n",
+       "47958                     NaN                         NaN              NaN   \n",
+       "\n",
+       "       human_development_index  \n",
+       "47956                      NaN  \n",
+       "47957                      NaN  \n",
+       "47958                      NaN  \n",
+       "\n",
+       "[3 rows x 41 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "covid_df.head(10)"
+    "raw_covid_df.tail(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
-    "covid_df['month_year'] = covid_df.apply(lambda row: dt.fromisoformat(row['date']).strftime('%b/%y'), axis=1)"
+    "mon_year_of = lambda str_date: datetime\\\n",
+    "                                .strptime(str_date, \"%Y-%m-%d\")\\\n",
+    "                                .strftime('%Y-%m')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "staging_covid_df = raw_covid_df[raw_covid_df['continent'].notnull()].reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "staging_covid_df['year_month'] = staging_covid_df.apply(lambda row: mon_year_of(row['date']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -232,80 +287,162 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>location</th>\n",
        "      <th>date</th>\n",
-       "      <th>state</th>\n",
-       "      <th>fips</th>\n",
-       "      <th>cases</th>\n",
-       "      <th>deaths</th>\n",
-       "      <th>month_year</th>\n",
+       "      <th>total_cases</th>\n",
+       "      <th>new_cases</th>\n",
+       "      <th>new_cases_smoothed</th>\n",
+       "      <th>total_deaths</th>\n",
+       "      <th>new_deaths</th>\n",
+       "      <th>...</th>\n",
+       "      <th>extreme_poverty</th>\n",
+       "      <th>cardiovasc_death_rate</th>\n",
+       "      <th>diabetes_prevalence</th>\n",
+       "      <th>female_smokers</th>\n",
+       "      <th>male_smokers</th>\n",
+       "      <th>handwashing_facilities</th>\n",
+       "      <th>hospital_beds_per_thousand</th>\n",
+       "      <th>life_expectancy</th>\n",
+       "      <th>human_development_index</th>\n",
+       "      <th>year_month</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-01-21</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Jan/20</td>\n",
+       "      <th>47398</th>\n",
+       "      <td>47398</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2020-10-02</td>\n",
+       "      <td>7850.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>14.000</td>\n",
+       "      <td>228.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.4</td>\n",
+       "      <td>307.846</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>30.7</td>\n",
+       "      <td>36.791</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>61.49</td>\n",
+       "      <td>0.535</td>\n",
+       "      <td>2020-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-22</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Jan/20</td>\n",
+       "      <th>47399</th>\n",
+       "      <td>47399</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2020-10-03</td>\n",
+       "      <td>7858.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>10.143</td>\n",
+       "      <td>228.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.4</td>\n",
+       "      <td>307.846</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>30.7</td>\n",
+       "      <td>36.791</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>61.49</td>\n",
+       "      <td>0.535</td>\n",
+       "      <td>2020-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-01-23</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Jan/20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-01-24</td>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Jan/20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-01-24</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Jan/20</td>\n",
+       "      <th>47400</th>\n",
+       "      <td>47400</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2020-10-04</td>\n",
+       "      <td>7885.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>11.714</td>\n",
+       "      <td>228.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.4</td>\n",
+       "      <td>307.846</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>30.7</td>\n",
+       "      <td>36.791</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>61.49</td>\n",
+       "      <td>0.535</td>\n",
+       "      <td>2020-10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3 rows × 43 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date       state  fips  cases  deaths month_year\n",
-       "0  2020-01-21  Washington    53      1       0     Jan/20\n",
-       "1  2020-01-22  Washington    53      1       0     Jan/20\n",
-       "2  2020-01-23  Washington    53      1       0     Jan/20\n",
-       "3  2020-01-24    Illinois    17      1       0     Jan/20\n",
-       "4  2020-01-24  Washington    53      1       0     Jan/20"
+       "       index iso_code continent  location        date  total_cases  new_cases  \\\n",
+       "47398  47398      ZWE    Africa  Zimbabwe  2020-10-02       7850.0       12.0   \n",
+       "47399  47399      ZWE    Africa  Zimbabwe  2020-10-03       7858.0        8.0   \n",
+       "47400  47400      ZWE    Africa  Zimbabwe  2020-10-04       7885.0       27.0   \n",
+       "\n",
+       "       new_cases_smoothed  total_deaths  new_deaths  ...  extreme_poverty  \\\n",
+       "47398              14.000         228.0         0.0  ...             21.4   \n",
+       "47399              10.143         228.0         0.0  ...             21.4   \n",
+       "47400              11.714         228.0         0.0  ...             21.4   \n",
+       "\n",
+       "       cardiovasc_death_rate  diabetes_prevalence  female_smokers  \\\n",
+       "47398                307.846                 1.82             1.6   \n",
+       "47399                307.846                 1.82             1.6   \n",
+       "47400                307.846                 1.82             1.6   \n",
+       "\n",
+       "       male_smokers  handwashing_facilities  hospital_beds_per_thousand  \\\n",
+       "47398          30.7                  36.791                         1.7   \n",
+       "47399          30.7                  36.791                         1.7   \n",
+       "47400          30.7                  36.791                         1.7   \n",
+       "\n",
+       "       life_expectancy  human_development_index  year_month  \n",
+       "47398            61.49                    0.535     2020-10  \n",
+       "47399            61.49                    0.535     2020-10  \n",
+       "47400            61.49                    0.535     2020-10  \n",
+       "\n",
+       "[3 rows x 43 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "covid_df.head(5)"
+    "staging_covid_df.tail(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covid_df = staging_covid_df.groupby(['year_month', 'continent', 'location', 'iso_code'], as_index=False)\\\n",
+    "            .agg({'new_cases': sum, 'new_deaths': sum})\\\n",
+    "            .sort_values(by=['year_month', 'continent','location'],\n",
+    "                         ascending=[False, True, True])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting"
    ]
   },
   {
@@ -332,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
